DTGB-708: Fixed button styling on iOS

--- a/components/21-atoms/button/_button.scss
+++ b/components/21-atoms/button/_button.scss
@@ -181,5 +181,7 @@
 input[type="button"],
 input[type="submit"] {
   @include button;
+
+  -webkit-appearance: none;
 }
 
